# FastTrack

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  FastTrack.desktop  FastTrack.pri  FastTrack.pro  FastTrackCli.desktop  Fishy.pro  Fishy.pro.user.547d645  Makefile  README.md  changelog.md  code_check.sh  conf.txt  contributing.md  darkTheme.css  darkTheme.qss  debug.sh  dependencies.sh  fancyTheme.qss  functions.cpp  functions.h  generateDocumentation.sh  lightTheme.qss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  profile.sh  readme.md  resources.qrc  run.sh  setupwindow.cpp  setupwindow.h  setupwindow.ui  sh.fasttrack.fasttrack.desktop  sh.fasttrack.fasttrack.metainfo.xml  sh.fasttrack.fasttrackcli.desktop  (+4 more)
.github/: FUNDING.yml
.github/workflows/: build.yml  build_cli.yml  build_linux.yml  build_mac.yml  build_win.yml  clang_format.yml  test.yml
Documentation/: DeveloperGuide.md  Doxyfile
Test/: Test.pro  accuracyTest.py  benchmark.py  trackingTest.cpp
Test/dataSet/images/: frame_000004.pgm  frame_000005.pgm  frame_000006.pgm  frame_000007.pgm  frame_000008.pgm  frame_000009.pgm  frame_000011.pgm  frame_000015.pgm  frame_000016.pgm  frame_000021.pgm  frame_000022.pgm  frame_000023.pgm  frame_000027.pgm  frame_000028.pgm  frame_000029.pgm  frame_000030.pgm  frame_000031.pgm  frame_000036.pgm  frame_000038.pgm  frame_000039.pgm  frame_000040.pgm  frame_000042.pgm  frame_000045.pgm  frame_000046.pgm  frame_000047.pgm  frame_000048.pgm  frame_000053.pgm  frame_000057.pgm  frame_000058.pgm  frame_000059.pgm  frame_000065.pgm  frame_000066.pgm  frame_000068.pgm  frame_000070.pgm  frame_000075.pgm  frame_000076.pgm  frame_000077.pgm  frame_000078.pgm  frame_000082.pgm  frame_000084.pgm  (+46 more)
Test/dataSet/images/Groundtruth/Tracking_Result/: background.pgm  parameter.param
UserManual/: UserManual.html  UserManual.md  UserManual.xml  readme.md  stylesheet.xsl
docs/dev/: DeveloperGuide.md  Doxyfile
docs/user/: batchTracking.md  cheatSheet.md  dataOutput.md  dataPreparation.md  detection.md  example.md  help.md  installation.md  interactiveTracking.md  intro.md  parametersSelection.md  reference.md  report.md  timeline.md  trackingCli.md  trackingInspector.md  trackingParameters.md  tutorial.md  workflow.md
docs/user/assets/: dataPreproc_vid.webm
src/: CMakeLists.txt  FastTrack-Cli.pro  FastTrack.pro  Fishy.pro  Hungarian.cpp  Hungarian.h  annotation.cpp  annotation.h  autolevel.cpp  autolevel.h  batch.cpp  batch.h  batch.ui  cli.cpp  cli.h  data.cpp  data.h  fasttrack-cli.cpp  functions.cpp  icon.icns  imageviewer.cpp  imageviewer.h  interactive.cpp  interactive.h  interactive.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openvideo.cpp  openvideo.h  openvideo.ui  replay.cpp  replay.h  replay.ui  resources.qrc  setupwindow.cpp  setupwindow.h  setupwindow.ui  statanalysis.cpp  (+15 more)
src/assets/: icon.icns  theme.qrc  theme.qss
test/: CMakeLists.txt  Test.pro  accuracyTest.py  benchmark.py  trackingTest.cpp  version_benchmark.py
test/dataSet/: dual.pgm
test/dataSet/images/: frame_000001.pgm  frame_000002.pgm  frame_000003.pgm  frame_000010.pgm  frame_000012.pgm  frame_000013.pgm  frame_000014.pgm  frame_000017.pgm  frame_000018.pgm  frame_000019.pgm  frame_000020.pgm  frame_000024.pgm  frame_000025.pgm  frame_000026.pgm  frame_000032.pgm  frame_000033.pgm  frame_000034.pgm  frame_000035.pgm  frame_000037.pgm  frame_000041.pgm  frame_000043.pgm  frame_000044.pgm  frame_000049.pgm  frame_000050.pgm  frame_000051.pgm  frame_000052.pgm  frame_000054.pgm  frame_000055.pgm  frame_000056.pgm  frame_000060.pgm  frame_000061.pgm  frame_000062.pgm  frame_000063.pgm  frame_000064.pgm  frame_000067.pgm  frame_000069.pgm  frame_000071.pgm  frame_000072.pgm  frame_000073.pgm  frame_000074.pgm  (+74 more)
test/dataSet/images/Groundtruth/Tracking_Result/: cfg.toml  parameter.param  tracking.db  tracking.txt
translations/: fasttrack_en.ts
